[gd_scene load_steps=42 format=2]

[ext_resource path="res://Pump.gd" type="Script" id=1]
[ext_resource path="res://Assets/Bellows-32.png" type="Texture" id=2]
[ext_resource path="res://Assets/Bellows-33.png" type="Texture" id=3]
[ext_resource path="res://Assets/Bellows-34.png" type="Texture" id=4]
[ext_resource path="res://Assets/Bellows-35.png" type="Texture" id=5]
[ext_resource path="res://Assets/Bellows-36.png" type="Texture" id=6]
[ext_resource path="res://Assets/Bellows-37.png" type="Texture" id=7]
[ext_resource path="res://Assets/Bellows-38.png" type="Texture" id=8]
[ext_resource path="res://Assets/Bellows-39.png" type="Texture" id=9]
[ext_resource path="res://Assets/Bellows-40.png" type="Texture" id=10]
[ext_resource path="res://Assets/Bellows-41.png" type="Texture" id=11]
[ext_resource path="res://Assets/Chamber-31.png" type="Texture" id=12]
[ext_resource path="res://Assets/Pump-50.png" type="Texture" id=13]
[ext_resource path="res://Assets/Pump-51.png" type="Texture" id=14]
[ext_resource path="res://Assets/Pump-52.png" type="Texture" id=15]
[ext_resource path="res://Assets/Pump-53.png" type="Texture" id=16]
[ext_resource path="res://Assets/Pump-54.png" type="Texture" id=17]
[ext_resource path="res://Assets/Pump-55.png" type="Texture" id=18]
[ext_resource path="res://Assets/Pump-56.png" type="Texture" id=19]
[ext_resource path="res://Assets/Centrifuge-42.png" type="Texture" id=20]
[ext_resource path="res://Assets/Centrifuge-43.png" type="Texture" id=21]
[ext_resource path="res://Assets/Centrifuge-44.png" type="Texture" id=22]
[ext_resource path="res://Assets/Centrifuge-45.png" type="Texture" id=23]
[ext_resource path="res://Assets/Centrifuge-46.png" type="Texture" id=24]
[ext_resource path="res://Assets/Centrifuge-47.png" type="Texture" id=25]
[ext_resource path="res://Assets/Centrifuge-48.png" type="Texture" id=26]
[ext_resource path="res://Assets/Centrifuge-49.png" type="Texture" id=27]
[ext_resource path="res://Assets/Air-Hose-30.png" type="Texture" id=28]
[ext_resource path="res://Assets/Needle-57.png" type="Texture" id=29]
[ext_resource path="res://AirHoseAnim.tres" type="Animation" id=30]
[ext_resource path="res://BigNeedleAnim.tres" type="Animation" id=31]
[ext_resource path="res://Assets/Gears-20.png" type="Texture" id=32]
[ext_resource path="res://Assets/Linkage-23.png" type="Texture" id=33]
[ext_resource path="res://Assets/Gears-16.png" type="Texture" id=34]
[ext_resource path="res://LinkageAnim.tres" type="Animation" id=35]
[ext_resource path="res://Assets/Gears-21.png" type="Texture" id=36]
[ext_resource path="res://Assets/Gears-17.png" type="Texture" id=37]
[ext_resource path="res://Assets/Gears-18.png" type="Texture" id=38]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "Bellows",
"speed": 24.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": false,
"name": "Pump",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ) ],
"loop": true,
"name": "Centrifuge",
"speed": 16.0
} ]

[node name="Pump" type="Node2D"]
script = ExtResource( 1 )

[node name="Bellows" type="AnimatedSprite" parent="."]
position = Vector2( 655.702, 867.948 )
scale = Vector2( 0.5, 0.5 )
z_index = 8
frames = SubResource( 1 )
animation = "Bellows"
frame = 18
playing = true
offset = Vector2( 6.71497, -473.59 )
flip_h = true

[node name="Chamber" type="Sprite" parent="."]
position = Vector2( 486.372, 590.481 )
scale = Vector2( 0.5, 0.5 )
z_index = 6
texture = ExtResource( 12 )

[node name="Pump" type="AnimatedSprite" parent="."]
position = Vector2( 114.081, 402.212 )
scale = Vector2( 0.5, 0.5 )
z_index = 6
frames = SubResource( 2 )
animation = "Pump"
frame = 11

[node name="Centrifuge" type="AnimatedSprite" parent="."]
position = Vector2( 114.525, 259.806 )
scale = Vector2( 0.5, 0.5 )
z_index = 7
frames = SubResource( 3 )
animation = "Centrifuge"

[node name="AirHose" type="Sprite" parent="."]
position = Vector2( 974.53, 675.428 )
scale = Vector2( 0.5, 0.5 )
z_index = 8
texture = ExtResource( 28 )
vframes = 8

[node name="BigNeedle" type="Sprite" parent="."]
position = Vector2( 113.423, 568.38 )
rotation = -1.71312
scale = Vector2( 0.5, 0.5 )
z_index = 7
texture = ExtResource( 29 )
offset = Vector2( -0.308777, -26.9473 )

[node name="AirHoseAnim" type="AnimationPlayer" parent="."]
anims/AirHoseanim = ExtResource( 30 )

[node name="BigNeedleAnim" type="AnimationPlayer" parent="."]
anims/BigNeedleAnim = ExtResource( 31 )

[node name="Linkage" type="Node" parent="."]

[node name="Piston" type="Sprite" parent="Linkage"]
position = Vector2( 162.458, 648.582 )
scale = Vector2( 0.5, 0.5 )
z_index = 8
texture = ExtResource( 32 )

[node name="Connector" type="Sprite" parent="Linkage/Piston"]
scale = Vector2( 0.5, 0.5 )
z_index = 13
texture = ExtResource( 33 )

[node name="LrgGear" type="Sprite" parent="Linkage"]
position = Vector2( 334.609, 634.121 )
rotation = 6.28319
scale = Vector2( 0.5, 0.5 )
z_index = 8
texture = ExtResource( 34 )

[node name="Connector2" type="Sprite" parent="Linkage/LrgGear"]
position = Vector2( 181.561, 0 )
scale = Vector2( 0.5, 0.5 )
z_index = 13
texture = ExtResource( 33 )

[node name="LinkageAnim" type="AnimationPlayer" parent="Linkage"]
anims/LinkageAnim = ExtResource( 35 )

[node name="Line2D" type="Line2D" parent="Linkage"]
z_index = 12
points = PoolVector2Array( 426.373, 634.789 )
width = 25.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 36 )
texture_mode = 1
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2

[node name="MidGearF" type="Sprite" parent="Linkage"]
position = Vector2( 535.263, 612.92 )
rotation = 25.1327
scale = Vector2( 0.5, 0.5 )
z_index = 7
texture = ExtResource( 37 )
offset = Vector2( 0.157837, 0.889038 )

[node name="MidGearD" type="Sprite" parent="Linkage"]
position = Vector2( 444.474, 699.455 )
rotation = -24.8186
scale = Vector2( 0.5, 0.5 )
z_index = 7
texture = ExtResource( 37 )
offset = Vector2( 0.43335, 0.250244 )

[node name="SmlGear" type="Sprite" parent="Linkage"]
position = Vector2( 444.722, 699.771 )
rotation = -24.8022
scale = Vector2( 0.5, 0.5 )
z_index = 8
texture = ExtResource( 38 )
offset = Vector2( 0.389618, -1.75513 )
[connection signal="animation_finished" from="Bellows" to="." method="_on_Bellows_animation_finished"]
[connection signal="animation_finished" from="Pump" to="." method="_on_Pump_animation_finished"]
[connection signal="animation_finished" from="Centrifuge" to="." method="_on_Centrifuge_animation_finished"]
